fixing navbar and resume page on mobile formatting

--- a/src/app/resumepage/resumepage.component.css
+++ b/src/app/resumepage/resumepage.component.css
@@ -1,3 +1,7 @@
 h1 {
   font-family: 'EB Garamond', serif;
 }
+
+.button1 {
+  font-size: 24px;
+}
